deploy: d428b8588bb1fb7a755fea38af60ae71ded2ccc4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Full-Stack Developer Portfolio</title>
+    <title>Shankar Sapkota</title>
     <meta name="description" content="Full-stack developer portfolio showcasing projects, blog posts, and professional experience." />
     <meta name="author" content="John Doe" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
