--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="John Doe - Full-Stack Developer" />
-    <meta property="og:description" content="Full-stack developer portfolio showcasing projects and expertise" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Shankar Sapkota" />
+    <meta property="og:description" content="Portfolio of Shankar — developer, creator, and problem solver." />
+  
+    
+    <meta name="twitter:title" content="Shankar Sapkota" />
+  
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="John Doe - Full-Stack Developer" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
